js/js.translator/testData/incremental/invalidation/companionPropertiesWithIntraModuleInliner/lib1/l1.1.kt
class MyClass {
    companion object {
        val stringProperty = "0"
        val intProperty = 1
    }
}
